# typo-correction-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  dependency.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py  sym_spell.py
