[tool.poetry]
name = "typo-correction-backend"
version = "1.0.0"
description = ""
authors = ["wbwb33 <wibi.s.wi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
symspellpy = "^6.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
